Gjøre taskoppsett enklere å migrere (#1134)
* Gjøre taskoppsett enklere å migrere

* Utsett task-indekser

* Legg på validering

* Fikse gjenstridig validering